<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="us.handstand.kartwheel.activity.TicketActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <us.handstand.kartwheel.layout.KartTextView
        android:id="@+id/title"
        style="@style/TicketContentTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:text="@string/tos" />

    <us.handstand.kartwheel.layout.TOSScrollView
        android:id="@+id/tos_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title"
        android:elevation="5dp">

        <us.handstand.kartwheel.layout.KartTextView
            android:id="@+id/tos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tos_content" />
    </us.handstand.kartwheel.layout.TOSScrollView>
</RelativeLayout>
