<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="16dp"
    android:orientation="vertical">

    <us.handstand.kartwheel.layout.KartTextView
        style="@style/TicketContentTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/enter_code" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/background_code_input"
        android:elevation="5dp">

        <EditText
            android:id="@+id/code_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_horizontal"
            android:imeOptions="actionGo"
            android:maxLines="1"
            android:padding="16dp"
            android:singleLine="true" />

        <android.support.v4.widget.ContentLoadingProgressBar
            android:id="@+id/networkProgress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="16dp"
            android:visibility="gone" />
    </FrameLayout>

    <us.handstand.kartwheel.layout.KartTextView
        android:id="@+id/getCodeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/does_not_have_code" />

</LinearLayout>