...
            style="@style/GameInfoTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_team" />

        <us.handstand.kartwheel.layout.GameInfoPlayerView
            android:id="@+id/playerOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:isUser="true"
            app:playerName="Michael Phelps"
            app:playerNumber="1" />

        <us.handstand.kartwheel.layout.GameInfoPlayerView
            android:id="@+id/playerTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:isUser="false"
            app:playerName="UNCLAIMED"
            app:playerNumber="2" />
...
